--- a/src/scss/components/_C12-split-title-content-background.scss
+++ b/src/scss/components/_C12-split-title-content-background.scss
@@ -19,4 +19,9 @@
       padding-bottom: $global-padding-medium-mobile / 2;
     }
   }
+
+  a {
+    color: $global-black;
+    text-decoration: underline;
+  }
 }
