--- a/src/scss/global/_typography.scss
+++ b/src/scss/global/_typography.scss
@@ -127,3 +127,8 @@ h4 {
     color: $brand-secondary;
   }
 }
+
+.uk-published {
+  font-size: 16px;
+  line-height: 140%;
+}
